added weather fonts, env.ts(will not use .env maybe, refactor done

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
+@import "./styles/weather-icons/weather-icons-wind.min.css";
+@import "./styles/weather-icons/weather-icons.min.css";
 
 $bg-main: #2a0a4a;
+$icon-main: #924da3;
 
 body {
   margin: 0;
-  padding: 0;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
 }
@@ -26,6 +28,10 @@ h2 {
 
 button {
   cursor: pointer;
+}
+i {
+  color: $icon-main;
+  font-size: 2rem;
 }
 
 a {
