--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,15 +1,46 @@
 .wrapper {
   min-height: 3rem;
   margin-bottom: 0.5rem;
-  .logo {
+  .content {
     display: flex;
-    justify-content: left;
     align-items: center;
-    cursor: pointer;
+    justify-content: space-between;
 
-    .imgl {
-      width: 2rem;
+    .logo {
+      display: flex;
+      justify-content: left;
+      align-items: center;
+      cursor: pointer;
+
+      .imgl {
+        width: 2rem;
+      }
+    }
+
+    .toggle {
+      cursor: pointer;
+      border: 1px solid rgba($color: #000000, $alpha: 0.4);
+      padding: 0.2rem 1rem;
+      border-radius: 0.2rem;
+      font-weight: bold;
+      position: relative;
+      &:after {
+        content: "Toggle between between F and oC";
+        position: absolute;
+        width: max-content;
+        bottom: -1.7rem;
+        right: 2rem;
+        background-color: rgba($color: #000000, $alpha: 0.8);
+        color: white;
+        padding: 0.3rem 0.3rem;
+        font-size: 0.8rem;
+        display: none;
+      }
+      &:hover:after {
+        display: block;
+      }
     }
   }
+
   box-shadow: 0px -1px 6px rgba($color: #000000, $alpha: 0.4);
 }
